Fix alignment on button

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -50,6 +50,7 @@ a {
 .right-group {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
 
 button {
